# axum-aide-kata

./: .env.local  .gitignore  Cargo.toml  Justfile  README.md
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  shutdown.rs
crates/docs/src/: openapi.rs  redoc.rs
crates/http-server/src/: health_check.rs  server.rs
