[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"

[workspace.dependencies]
anyhow = "^1"
axum = "^0"
futures = "^0"
hyper = { version = "^1", features = ["full"] }
serde = { version = "^1",  features = ["derive"] }
tokio = { version = "^1", features = ["full", "tracing"] }
tower = "^0"
tower-http = { version = "^0", features = ["trace"] }
tracing = "^0"
tracing-subscriber = { version = "^0", features = ["env-filter"] }
