[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"

[workspace.dependencies]
common = { path = "./crates/common" }
docs = { path = "./crates/docs" }
http-server = { path = "./crates/http-server" }

aide = { version = "^0", features = ["axum", "redoc", "macros", "axum-extra"] }
anyhow = "^1"
axum = "^0"
axum-macros = "^0"
axum-extra = "^0"
axum-jsonschema = { version = "^0", features = ["aide"] }
futures = "^0"
hyper = { version = "^1", features = ["full"] }
schemars = { version = "^0", features = ["uuid1"] }
serde = { version = "^1",  features = ["derive", "rc"] }
serde_json = { version = "^1", features = ["preserve_order"] }
sqlx = { version = "^0", features = ["postgres", "runtime-tokio"] }
thiserror = "^1"
tokio = { version = "^1", features = ["full", "tracing"] }
tower = "^0"
tower-http = { version = "^0", features = ["trace"] }
tracing = "^0"
tracing-subscriber = { version = "^0", features = ["env-filter"] }
uuid = { version = "^1", features = ["serde", "v4"] }
