[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
common.workspace = true
docs.workspace = true
http-server.workspace = true

anyhow.workspace = true
axum.workspace = true
futures.workspace = true
hyper.workspace = true
serde.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
